Revision history for Ecosystem-Archive-Update

{{$NEXT}}

0.0.25  2024-05-08T16:05:01+02:00
    - Update several dependencies
    - Update copyright year

0.0.24  2023-06-01T12:31:49+02:00
    - Update several dependencies

0.0.23  2022-09-07T11:18:57+02:00
    - Test the "main" branch before the "master" branch when harvesting
      the p6c ecosystem: assuming that developers will switch from "master"
      to "main" rather than the other way around.  Spotted by ugexe++

0.0.22  2022-07-06T20:14:48+02:00
    - Drop meta-as-json test, it was too finicky in different CI's

0.0.21  2022-07-06T15:58:04+02:00
    - Bump dependency on Rakudo::CORE::META to get tests passing on
      Github Actions.

0.0.20  2022-07-06T15:14:22+02:00
    - Make sure that redirects are being followed

0.0.19  2022-06-02T17:44:36+02:00
    - Remove dependency on Cro::HTTP, it was just adding too many
      dependencies.  Instead, just use good old `curl`.
    - Upped version of Rakudo::CORE::META, and adapted tests accordingly.

0.0.18  2022-05-10T14:28:53+02:00
    - Fix over-eager escaping of ":"

0.0.17  2022-05-07T11:48:40+02:00
    - Need to escape *, not &

0.0.16  2022-05-06T15:38:16+02:00
    - Up dependency on Identity-Utils
    - Make sure % and * are also URL encoded in download URLs
    - Add sponsorship link

0.0.15  2022-04-29T12:26:39+02:00
    - Handle failed git ecosystem URLs better, report on STDERR

0.0.14  2022-03-08T15:40:10+01:00
    - Unbreak updating modules in p6c ecosystem, vrurg++ for the spot!

0.0.13  2022-02-23T19:56:10+01:00
    - Make sure source-urls also URL-escape colons

0.0.12  2022-02-10T20:15:09+01:00
    - Upped several dependencies for the latest goodies

0.0.11  2022-02-10T10:22:23+01:00
    - Fix problem in extension of source-url for dists on CPAN

0.0.10  2022-01-29T19:45:02+01:00
    - Remove all functionality that is not needed for the pure
      updating logic.
    - Up dependency on JSON::Fast::Hyper

0.0.9  2022-01-28T22:35:19+01:00