@@ -6,7 +6,7 @@
   "build-depends": [
   ],
   "depends": [
-    "JSON::Fast::Hyper:ver<0.0.5>:auth<zef:lizmat>",
+    "JSON::Fast::Hyper:ver<0.0.6>:auth<zef:lizmat>",
     "paths:ver<10.0.9>:auth<zef:lizmat>",
     "Rakudo::CORE::META:ver<0.0.9+>:auth<zef:lizmat>",
     "Identity::Utils:ver<0.0.11+>:auth<zef:lizmat>"
@@ -25,5 +25,5 @@
   ],
   "test-depends": [
   ],
-  "version": "0.0.25"
+  "version": "0.0.26"
 }
