@@ -10,6 +10,8 @@ filename = lib/Ecosystem/Archive/Update.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
 
 [UploadToZef]
