@@ -1,4 +1,4 @@
-use JSON::Fast::Hyper:ver<0.0.5>:auth<zef:lizmat>;
+use JSON::Fast::Hyper:ver<0.0.6>:auth<zef:lizmat>;
 use paths:ver<10.0.9>:auth<zef:lizmat>;
 use Rakudo::CORE::META:ver<0.0.9+>:auth<zef:lizmat>;
 use Identity::Utils:ver<0.0.11+>:auth<zef:lizmat>;
@@ -141,7 +141,7 @@ class Ecosystem::Archive::Update {
 
     method !update($force-json --> Nil) {
         await
-          (start self!update-git($force-json)),
+#          (start self!update-git($force-json)),
           (start self!update-cpan($force-json)),
           (start self!update-zef($force-json)),
         ;
